# smartcontract-lottery

./: README.md  brownie-config.yaml  pyproject.toml
tests/: test_lottery.py
